--- a/AspNetCoreSpa/wwwroot/Client/app/app.component.css
+++ b/AspNetCoreSpa/wwwroot/Client/app/app.component.css
@@ -1,3 +1,8 @@
+@import '../../../node_modules/font-awesome/css/font-awesome.css';
+@import '../../../node_modules/bootstrap/dist/css/bootstrap.css';
+@import '../../../node_modules/primeng/resources/primeng.css';
+@import '../../../node_modules/primeng/resources/themes/trontastic/theme.css'; 
+
 li {
     font-size: large;
 }
