--- a/AspNetCoreSpa/wwwroot/Client/app/shared/spinner.component.html
+++ b/AspNetCoreSpa/wwwroot/Client/app/shared/spinner.component.html
@@ -1,9 +1,9 @@
 <div>
-    <button class="btn btn-default tatoobutton" (click)="Decrease()">
+    <button title={{TitleDecrease}} class="btn btn-default tatoobutton" (click)="Decrease()">
         <i class='glyphicon glyphicon-chevron-left'></i>
     </button>
     {{IncomeVal}}
-    <button class="btn btn-default tatoobutton" (click)="Increase()">
+    <button title={{TitleIncrease}} class="btn btn-default tatoobutton" (click)="Increase()">
         <i class='glyphicon glyphicon-chevron-right'></i>
     </button>
 </div>
