--- a/AspNetCoreSpa/wwwroot/Client/app/scretches/scretches.component.css
+++ b/AspNetCoreSpa/wwwroot/Client/app/scretches/scretches.component.css
@@ -1,15 +1,24 @@
-/*test styles*/
+/*text styles*/
 .text {
     font-family: 'TEMPUS SANS ITC';
     font-weight: bold;
+    color: rgba(41, 43, 41, 0.7);
+}
+
+.plaintext {
     font-size: 4vmin;
-    text-shadow: #ffffff 0 0 4px;
+}
+
+.heading {
+    font-size: 7vmin;
     color: rgba(41, 43, 41, 0.9);
 }
 
-.maintext {
-    font-family: 'TEMPUS SANS ITC';
-    font-weight: bold;
+.paragraphhead {
+    color: rgba(41, 43, 41, 0.9);
+}
+
+.paragraphtext {
     color: rgba(41, 43, 41, 0.7);
 }
 
@@ -18,15 +27,24 @@
     color: rgba(41, 43, 41, 0.9);
 }
 
-.plaintext {
-    font-size: 4vmin;
+.textfordescription {
+    font-family: 'TEMPUS SANS ITC';
+    font-weight: bold;
+    color: rgba(255, 255, 255, 0.4);
+}
+
+.paragraphheaddescription {
+    color: rgba(255, 255, 255, 0.7);
+}
+
+.paragraphdescription {
+    color: rgba(255, 255, 255, 0.4);
 }
 
 /*styles*/
 .tatoobutton {
     background-color: #000000;
     border-color: #FFFFFF;
-    float: right;
 }
 
 .tatoobutton:hover {
@@ -59,8 +77,8 @@
 
 .tatooinput {
     color: #000000;
-    min-width: 58%;
-    max-width: 58%;
+    min-width: 56%;
+    max-width: 56%;
     margin-right: 1%;
 }
 
@@ -77,6 +95,40 @@
 
 @media only screen and (min-width: 800px) {
     .tatoodiv {
-        width: 40%;
+        width: 50%;
     }
+
+    .tatooinput {
+        min-width: 59%;
+        max-width: 59%;
+    }
+}
+
+.descriptionback {
+    background-color: rgba(41, 43, 41, 0.7);
+    width: 100%;
+}
+
+.scretch{
+    cursor: pointer;
+}
+
+.formtext {
+    font-family: 'comic sans ms';
+    color: black;
+}
+
+.lowborder {
+    border-bottom-style: solid;
+    border-bottom-color: #000000;
+    border-left-width: 1px;
+}
+
+.inputfile {
+    width: 0.1px;
+    height: 0.1px;
+    opacity: 0;
+    overflow: hidden;
+    position: absolute;
+    z-index: -1;
 }
