--- a/AspNetCoreSpa/wwwroot/Client/app/scretches/scretches.component.html
+++ b/AspNetCoreSpa/wwwroot/Client/app/scretches/scretches.component.html
@@ -6,89 +6,124 @@
   }
   </style>
 
-<div class="tatooarticle maintext">
+<div class="tatooarticle text plaintext">
     <p class="margin2 heading"> {{ArticleTitle}} </p>
-    <p class="margin2 maintext plaintext"> {{ArticleText}} </p>
+    <p class="text plaintext margin2"> {{ArticleText}} </p>
 </div>
+
+<div class='has-error' *ngIf='ErrorMessage'>{{ErrorMessage}}</div>
 
 <div class="container" style="margin:0%; width:100%; padding:0%">
     <br>
-    <div id="myCarousel" class="carousel slide" data-ride="carousel">
+    <div id="myCarousel" class="carousel slide" data-ride="carousel" data-interval="false">
         <!-- Indicators -->
         <ol class="carousel-indicators">
-            <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-            <li data-target="#myCarousel" data-slide-to="1"></li>
-            <li data-target="#myCarousel" data-slide-to="2"></li>
+            <li data-target="#myCarousel" *ngFor="let Scretch of Scretches" data-slide-to='DescriptionNumber' [ngClass]="{active: isActive(Scretch.imageUrl)}"></li>
         </ol>
 
         <!-- Wrapper for slides -->
         <div class="carousel-inner" role="listbox">
-
-            <div class="item active" style="width:100%; margin:0%">
-                <img src="../assets/images/Scretches/Scretch1.jpg" alt="Leafs">
-                <div class="carousel-caption text">
-                    <h1>Leafs</h1>
-                    <p>20 x 30 cm, 1 session, 50$</p>
-                </div>
+            <div *ngFor="let Scretch of Scretches" class="item" [ngClass]="{active: isActive(Scretch.imageUrl)}" style="width:100%; margin:0%">
+                <a pageScroll href="#form"> <img class="scretch" src={{Scretch.imageUrl}} alt={{Scretch.scretchName}} (click)='ChoosingScretch()'> </a>
             </div>
-
-            <div class="item">
-                <img src="../assets/images/Scretches/Scretch2.jpg" alt="Red Flowers">
-                <div class="carousel-caption text">
-                    <h1>Red Flowers</h1>
-                    <p>15 x 30 cm, 1 session, 60$</p>
-                </div>
-            </div>
-
-            <div class="item">
-                <img src="../assets/images/Scretches/Scretch3.jpg" alt="Geometry + Nature">
-                <div class="carousel-caption text">
-                    <h1>Geometry + Nature</h1>
-                    <p>10 x 10 cm, 2 sessions, 65 $</p>
-                </div>
-            </div>
-
         </div>
 
         <!-- Left and right controls -->
-        <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
-            <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+        <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev" (click)='Left()'>
+            <span class="glyphicon glyphicon-chevron-left" aria-hidden="false"></span>
             <span class="sr-only">Previous</span>
         </a>
-        <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
-            <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+        <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next" (click)='Right()'>
+            <span class="glyphicon glyphicon-chevron-right" aria-hidden="false"></span>
             <span class="sr-only">Next</span>
         </a>
     </div>
 </div>
 
-<div class='panel panel-primary tatoodiv' style="margin-top:2%">
-    <div class='panel-heading' id="tatoopanel">
-        {{Choosed}} {{Option}}
-    </div>
+<br />
 
-    <div class='panel-body'>
-        <div class="ui-g" style="width:250px;margin-bottom:10px">
-            <div class="ui-g-12"><p-radioButton name="typeOfPicture" value="Scretch from gallery" label={{Scretch}} [(ngModel)]="Option"></p-radioButton></div>
-            <div class="ui-g-12"><p-radioButton name="typeOfPicture" value="Your own picture" label={{Picture}} [(ngModel)]="Option"></p-radioButton></div>
-        </div>
-    </div>
+<div class="descriptionback textfordescription plaintext">
+    <p class="margin2 paragraphheaddescription">
+        {{ScretchNameLabel}}
+        <label *ngIf='!IsFirst' class="paragraphdescription">{{ScretchName}}</label>
+        <label *ngIf='IsFirst' class="paragraphdescription"> {{Scretches !== undefined ? Scretches[0].scretchName : undefined}} </label>
+    <p class="margin2 paragraphheaddescription">
+        {{ScretchDescriptionLabel}}
+        <label *ngIf='!IsFirst' class="paragraphdescription">{{ScretchDescription}}</label>
+        <label *ngIf='IsFirst' class="paragraphdescription">{{Scretches !== undefined ? Scretches[0].description : undefined}}</label>
+    </p>
+    <p class="margin2 paragraphheaddescription">
+        {{ScretchPriceLabel}}
+        <label *ngIf='!IsFirst' class="paragraphdescription">{{ScretchPrice | currency:'USD':true:'1.2-2'}}</label>
+        <label *ngIf='IsFirst' class="paragraphdescription">${{Scretches !== undefined ? Scretches[0].price : undefined }}.00</label>
+    </p>
+    <p class="margin2 paragraphheaddescription">
+        {{ScretchSizeLabel}}
+        <label *ngIf='!IsFirst' class="paragraphdescription">{{ScretchWidth}}cm x {{ScretchHeight}}cm</label>
+        <label *ngIf='IsFirst' class="paragraphdescription">{{Scretches !== undefined ? Scretches[0].width : undefined }}cm x {{Scretches !== undefined ? Scretches[0].height : undefined }}cm</label>
+    </p>
 </div>
 
-<div class='panel panel-primary tatoodiv' style="margin-top:2%">
+<div id="form" class='panel panel-primary tatoodiv' style="margin-top:2%">
     <div class='panel-heading' id="tatoopanel">
-        {{FormTitle}}
+        {{PanelHeading}}
     </div>
-
-    <div class='panel-body'>
-        <div class='row'>
-            <label class='col-md-2 tatoolable'>{{LabelChoose}}</label>
-            <select class='tatooinput marginbottom'>
-                <option>Leafs</option>
-                <option>Red Flowers</option>
-                <option>Geometry + Nature</option>
-            </select>
+    <div class='panel-body'>    
+        <div class="ui-g lowborder" style="width:100%; margin-bottom:10px">
+            <div class="ui-g-12"><p-radioButton name="typeOfPicture" value="Scretch from gallery" label={{Scretch}} [(ngModel)]="Option"></p-radioButton></div>
+            <div class="ui-g-12"><p-radioButton name="typeOfPicture" value="Your own picture" label={{Picture}} [(ngModel)]="Option"></p-radioButton></div>
+        </div>        
+        <div *ngIf="Option=='Scretch from gallery'" class="lowborder">
+            <div class='row'>
+                <label class='col-md-2 tatoolable'>{{LabelChoose}}</label>
+                <select class='tatooinput marginbottom' [(ngModel)]="SelectedName" (change)="OnSelectionChange()">
+                    <option value="" disabled selected>Select scretch name</option>
+                    <option *ngFor="let Scretch of Scretches" [value]="Scretch.scretchName">{{Scretch.scretchName}}</option>
+                </select>
+            </div>
+            <div *ngIf="SelectedName && Option=='Scretch from gallery'" class="formtext">
+                <p>
+                    <label>
+                        {{ScretchNameLabel}}
+                    </label>
+                    {{SelectedName}}
+                <p>
+                    <label>
+                        {{ScretchDescriptionLabel}}
+                    </label>
+                    {{SelectedNameDescription}}
+                </p>
+                <p>
+                    <label>
+                        {{ScretchPriceLabel}}
+                    </label>
+                    {{ScretchNamePrice | currency:'USD':true:'1.2-2'}}
+                </p>
+                <p>
+                    <label>
+                        {{ScretchSizeLabel}}
+                    </label>
+                    {{ScretchNameWidth}}cm x {{ScretchNameHeight}}cm
+                </p>
+            </div>
         </div>
-        <button class=' btn btn-primary tatoobutton'> {{ButtonName}} </button>
+        <div *ngIf="Option=='Your own picture'" class="lowborder">
+            <div class='row'>
+                <label class='col-md-2 tatoolable'>{{LabelUpload}}</label>
+                <input name="file" id="file" class='inputfile' type="file" accept=".gif,.jpg,.jpeg,.png" #file (change)="onChange(file.files)">
+                <label class='btn btn-primary tatoobutton marginbottom' for="file">Choose a file</label>
+                <span *ngIf="ChoosedFileName" style="color: black"> {{ChoosedFileName}} </span>
+                <span *ngIf="!ChoosedFileName" style="color: black"> no file </span>
+            </div>
+        </div>
+        <button class='btn btn-primary tatoobutton' style="float: right; margin-top: 1%"> {{ButtonName}} </button>
+    </div>
+    <div class='panel-footer' id="tatoopanel">
+        {{Choosed}} <span *ngIf="!Option">nothing</span>
+        <ul *ngIf="Option">
+            <li>{{Option}}</li>
+            <li *ngIf="SelectedName==undefined && Option=='Scretch from gallery'"> {{ScretchNameLabel}} {{NotChoosed}}</li>
+            <li *ngIf="SelectedName && Option=='Scretch from gallery'"> {{ScretchNameLabel}} {{SelectedName}}</li>
+        </ul>
     </div>
 </div>
