--- a/AspNetCoreSpa/wwwroot/Client/app/shared/allProducts.component.html
+++ b/AspNetCoreSpa/wwwroot/Client/app/shared/allProducts.component.html
@@ -1,3 +1,15 @@
+<style>
+    .ui-growl-item-container {
+        margin-top: 50px !important;
+    }
+
+    #growl {
+        margin-top: 50px;
+    }
+</style>
+
+<p-growl [value]="Msgs" id="growl"></p-growl>
+
 <!--Template for stars-->
 <ng-template #t let-fill="fill">
     <span *ngIf="fill === 100" class="star full">&#9733;</span>
@@ -24,8 +36,7 @@
         <div class='has-error' *ngIf='ErrorMessage'>{{ErrorMessage}}</div>
 
         <div class='table-responsive'>
-            <table class='table tatootable'
-                   *ngIf='AllProducts && AllProducts.length'>
+            <table class='table tatootable'>
                 <thead>
                     <tr>
                         <th>{{Image}}</th>
@@ -37,7 +48,7 @@
                         <th *ngIf="IsCart"></th>
                     </tr>
                 </thead>
-                <tbody>
+                <tbody *ngIf='AllProducts && AllProducts.length'>
                     <tr *ngFor='let product of AllProducts | productFilter:ListFilter'>
                         <td>
                             <img
@@ -46,7 +57,7 @@
                                  [style.width.px]='ImageWidth' 
                                  [style.margin.px]='ImageMargin'>
                         </td>
-                        <td><a [routerLink]="['/product', product.id]">
+                        <td><a [routerLink]="['/product', product.id, CartToSend]">
                             {{product.productName}}
                             </a>
                         </td>
@@ -56,23 +67,75 @@
                             <ngb-rating title = {{product.starRating}} [(rate)]="product.starRating" [starTemplate]="t" [readonly]="true" max="5"></ngb-rating>
                         </td>
                         <td *ngIf="IsCart">
-                            <spinnerNum [IncomeVal]="1"></spinnerNum>
+                            <spinnerNum [IncomeVal]="product.amount" (IncreaseAmount)="IncreasingAmount(product)" (DecreaseAmount)="DecreasingAmount(product)"></spinnerNum>
                         </td>
-                        <td *ngIf="IsCart"> 
-                        <a class='btn btn-default tatoobutton' (click)='RemoveProduct()'>
+                        <td *ngIf="IsCart" class="remove-row"> 
+                        <a title={{TitleRemove}} class='btn btn-default tatoobutton' (click)='RemoveProduct(product.id)' style="float: right">
                             <i class='glyphicon glyphicon-remove'></i> {{Remove}}
                         </a>
                         </td>
                     </tr>
                 </tbody>
             </table>
-            
-            <div *ngIf="IsCart" class='panel-footer'>
-                <a class='btn btn-default tatoobutton' (click)='BuyAll()'>
-                    {{Buy}}
-                </a>
-            </div>
+        </div>
 
+        <div *ngIf="IsCart" class='panel-footer' style="width:100%; padding-left: 0%; padding-right: 0%;">
+            <button [disabled]='!AllProducts || AllProducts.length==0' title={{TitleClear}} class='btn btn-default tatoobutton' (click)='ShowDialogClear()'>
+                <i class='glyphicon glyphicon-remove'></i> {{Delete}}
+            </button>
+            <button [disabled]='!AllProducts || AllProducts.length==0' title={{TitleBuy}} class='btn btn-default tatoobutton' (click)='ShowDialogByuAll()' style="float: right; margin-bottom: 1%">
+                <i class='glyphicon glyphicon-shopping-cart'></i> {{Buy}}
+            </button>
+            <div style="width: 100%" class="flexer">
+                <p>
+                    <label style="float: right">{{LabelTotalPrice}}{{TotalPrice| currency:'USD':true:'1.2-2'}}</label>     
+                </p>
+                <p>
+                    <label style="float: right">{{LabelTotalAmount}}{{TotalAmount}}</label>
+               </p>        
+            </div>
         </div>
     </div>
 </div>
+
+<p-dialog [(visible)]="DisplayBuyAll" [dismissableMask]="false" [showHeader]="false" [contentStyle]="{'background-color':'white', 'color':'black', 'border-radius':'2px', 'border-color':'black', 'border-width':'5px', 'padding':'0px', 'font-family':'comic sans ms'}">
+    <span class='col-md-2 tatoolable' style="width:100%; padding-bottom:1%; padding-top:1%; margin-left: 0%; margin-bottom:1%; background-color:black; color: white">Do you want to buy all the products? </span>
+    <p>
+        <label style="width:98%; margin-left:1%; margin-top:1%">{{NowInCart}}</label>
+    </p>
+    <p>
+        <label style="width:98%; margin-left:1%; margin-top:1%">{{LabelTotalPrice}}{{TotalPrice| currency:'USD':true:'1.2-2'}}</label>
+    </p>
+    <p>
+        <label style="width:98%; margin-left: 1%">{{LabelTotalAmount}}{{TotalAmount}}</label>
+    </p>             
+    <br />
+    <button style="float: right; margin-left: 1%; margin-bottom: 1%; margin-right: 1%" class=' btn btn-primary tatoobutton' (click)='BuyAll()'> 
+         <i class='glyphicon glyphicon-shopping-cart'></i> {{Buy}}
+     </button>
+     <button style="float: right; margin-bottom: 1%" class=' btn btn-primary tatoobutton' (click)='HideDialogByuAll()'> 
+        {{Cancel}} 
+     </button>
+</p-dialog>
+
+
+
+<p-dialog [(visible)]="DisplayClear" [dismissableMask]="true" [showHeader]="false" [contentStyle]="{'background-color':'white', 'color':'black', 'border-radius':'2px', 'border-color':'black', 'border-width':'5px', 'padding':'0px', 'font-family':'comic sans ms'}">
+    <span class='col-md-2 tatoolable' style="width:100%; padding-bottom:1%; padding-top:1%; margin-left: 0%; margin-bottom:1%; background-color:black; color: white">Do you want to clear the cart? </span>
+    <p>
+        <label style="width:98%; margin-left:1%; margin-top:1%">{{NowInCart}}</label>  
+    </p>
+    <p>
+        <label style="width:98%; margin-left:1%; margin-top:1%">{{LabelTotalPrice}}{{TotalPrice| currency:'USD':true:'1.2-2'}}</label>
+    </p>
+    <p>
+        <label style="width:98%; margin-left: 1%">{{LabelTotalAmount}}{{TotalAmount}}</label>
+    </p>
+    <br />
+    <button style="float: right; margin-left: 1%; margin-bottom: 1%; margin-right: 1%" class=' btn btn-primary tatoobutton' (click)='DeleteAll()'>
+        <i class='glyphicon glyphicon-remove'></i> {{Delete}}
+    </button>
+    <button style="float: right; margin-bottom: 1%" class=' btn btn-primary tatoobutton' (click)='HideDialogClear()'>
+        {{Cancel}}
+    </button>
+</p-dialog> 
