--- a/AspNetCoreSpa/wwwroot/Client/app/help/help.component.html
+++ b/AspNetCoreSpa/wwwroot/Client/app/help/help.component.html
@@ -1,14 +1,14 @@
-﻿<div class="tatooarticle text">
-        <p  class="margin2 heading">{{Maintitle}}</p>
+﻿<div class="questions_page">
+    <div class="tatooarticle text">
+        <p class="margin2 heading">{{Maintitle}}</p>
 
-        <p class="text plaintext margin2"> {{Description}} </p>
+        <p class="text  margin2"> {{Description}} </p>
+        <p></p>
+    </div>
 
-    <p></p>
-</div>
+    <br>
 
-<br>
-
-<div class="tatooarticle text plaintext" id="menu">
+    <div class="text tatooarticle" id="menu">
         <ol class="margin2">
             <li> <a pageScroll href="#menu"> {{Points[0]}} </a> </li>
             <li> <a pageScroll href="#theme1"> {{Points[1]}} </a> </li>
@@ -25,52 +25,54 @@
     <p></p>
     <br>
 
-    <div class="tatooarticle text plaintext">
-    <ol class="margin2 text questiontext" >
-        <li>
-            <label id="theme1" class="paragraphhead"> {{Points[0]}} </label>
-            <p>{{Theme1}} </p>
-        </li>
-        <li>
-            <label id="theme2" class="paragraphhead"> {{Points[1]}} </label>
-            <p>{{Theme2}} </p>
-        </li>
+    <div class="text tatooarticle ">
+        <ol class="text margin2 questiontext">
+            <li>
+                <label id="theme1" class="paragraphhead"> {{Points[0]}} </label>
+                <p>{{Theme1}} </p>
+            </li>
+            <li>
+                <label id="theme2" class="paragraphhead"> {{Points[1]}} </label>
+                <p>{{Theme2}} </p>
+            </li>
 
-        <li>
-            <label id="theme3" class="paragraphhead"> {{Points[2]}} </label>
-            <p>{{Theme3}} </p>
-            <ul>
-                <li>{{Theme3_item1}}</li>
-                <li>{{Theme3_item2}}</li>
-                <li>{{Theme3_item3}}</li>
-                <li>{{Theme3_item4}}</li>
-                <li>{{Theme3_item5}}</li>
-                <li>{{Theme3_item6}}</li>
-            </ul>
-        </li>
-        <li>
-            <label id="theme4" class="paragraphhead"> {{Points[3]}} </label>
-            <p>{{Theme4}} </p>
-        </li>
-        <li>
-            <label id="theme5" class="paragraphhead"> {{Points[4]}} </label>
-            <p> {{Theme5}} <a routerLink="/scretches"> {{Here}}</a> . </p>
-        </li>
-        <li>
-            <label id="theme6" class="paragraphhead"> {{Points[5]}} </label>
-            <p> {{Theme6}} </p>
-        </li>
-        <li>
-            <label id="theme7" class="paragraphhead"> {{Points[6]}} </label>
-            <p> {{Theme7}} </p>
-        </li>
-        <li>
-            <label id="theme8" class="paragraphhead"> {{Points[7]}} </label>
-            <p> {{Theme8_part1}} <a routerLink="/welcome"> {{Here}} </a> {{Theme8_part2}} <a routerLink="/aboutus"> {{Here}} </a> {{Theme8_part3}} <a routerLink="/aboutus"> {{Shop}}</a> {{Theme8_part4}} <a routerLink="/aboutus"> {{Scretches}} </a>. </p>
-        </li>
-        <li>
-            <label id="theme9" class="paragraphhead"> {{Points[8]}} </label>
-            <p> {{Theme9}} <a routerLink="/questions"> {{Page}}</a>. </p>
-        </li>
-    </ol>
+            <li>
+                <label id="theme3" class="paragraphhead"> {{Points[2]}} </label>
+                <p>{{Theme3}} </p>
+                <ul>
+                    <li>{{Theme3_item1}}</li>
+                    <li>{{Theme3_item2}}</li>
+                    <li>{{Theme3_item3}}</li>
+                    <li>{{Theme3_item4}}</li>
+                    <li>{{Theme3_item5}}</li>
+                    <li>{{Theme3_item6}}</li>
+                </ul>
+            </li>
+            <li>
+                <label id="theme4" class="paragraphhead"> {{Points[3]}} </label>
+                <p>{{Theme4}} </p>
+            </li>
+            <li>
+                <label id="theme5" class="paragraphhead"> {{Points[4]}} </label>
+                <p> {{Theme5}} <a routerLink="/scretches"> {{Here}}</a> . </p>
+            </li>
+            <li>
+                <label id="theme6" class="paragraphhead"> {{Points[5]}} </label>
+                <p> {{Theme6}} </p>
+            </li>
+            <li>
+                <label id="theme7" class="paragraphhead"> {{Points[6]}} </label>
+                <p> {{Theme7}} </p>
+            </li>
+            <li>
+                <label id="theme8" class="paragraphhead"> {{Points[7]}} </label>
+                <p> {{Theme8_part1}} <a routerLink="/welcome"> {{Here}} </a> {{Theme8_part2}} <a routerLink="/aboutus"> {{Here}} </a> {{Theme8_part3}} <a routerLink="/aboutus"> {{Shop}}</a> {{Theme8_part4}} <a routerLink="/aboutus"> {{Scretches}} </a>. </p>
+            </li>
+            <li>
+                <label id="theme9" class="paragraphhead"> {{Points[8]}} </label>
+                <p> {{Theme9}} <a routerLink="/questions"> {{Page}}</a>. </p>
+            </li>
+        </ol>
+    </div>
+
 </div>
