--- a/AspNetCoreSpa/wwwroot/Client/app/products/product-detail.component.html
+++ b/AspNetCoreSpa/wwwroot/Client/app/products/product-detail.component.html
@@ -63,9 +63,9 @@
     </div>
 
     <div class='panel-footer'>
-        <a class='btn btn-default tatoobutton' (click)='onBack()' style='width:80px'>
+        <button class='btn btn-default tatoobutton' (click)='onBack()' style='width:80px'>
             <i class='glyphicon glyphicon-chevron-left'></i> {{Back}}
-        </a>
+        </button>
         <button [disabled]='!IsInCart' class='btn btn-default tatoobutton' (click)='RemoveProduct()' style='float: right'>
             <i class='glyphicon glyphicon-remove'></i> {{Remove}}
         </button>
